--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,20 @@
-name: Astronomer CI - Additional build-time args
+name: Astronomer CI - Deploy code
 
 on:
   push:
     branches:
       - main
 
+env:
+  ## Set API Token as an environment variable
+  ASTRO_API_TOKEN: ${{ secrets.ASTRO_API_TOKEN }}
+
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-    env:
-      ## Set API Token as an environment variable
-      ASTRO_API_TOKEN: ${{ secrets.ASTRO_API_TOKEN}}
     steps:
-    - name: Check out the repo
-      uses: actions/checkout@v3
-    - name: Create image tag
-      id: image_tag
-      run: echo ::set-output name=image_tag::astro-$(date +%Y%m%d%H%M%S)
-    - name: Build image
-      uses: docker/build-push-action@v2
-      with:
-        tags: ${{ steps.image_tag.outputs.image_tag }}
-        load: true
-        # Define your custom image's build arguments, contexts, and connections here using
-        # the available GitHub Action settings:
-        # https://github.com/docker/build-push-action#customizing .
-        # This example uses `build-args` , but your use case might require configuring
-        # different values.
-        build-args: |
-          "FROM quay.io/astronomer/astro-runtime:10.6.2"
     - name: Deploy to Astro
-      uses: astronomer/deploy-action@v0.4
+      uses: astronomer/deploy-action@v0.2
       with:
-        deployment-id: <deployment id>
-        image-name: ${{ steps.image_tag.outputs.image_tag }}
+        deployment-id: clubd4khb007k01pbmv43149a
+        parse: true
