--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
-astro-sdk-python[amazon,databricks,duckdb,google,postgres,snowflake]==1.5.3
-
+apache-airflow-providers-databricks==2.4.0
+apache-airflow-providers-slack==4.2.3
+boto3==1.23.1
+mlflow==1.26.1
